# atm0s-media-server

./: .gitignore  .release-plz.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  Readme.md  _typos.toml  book.toml  deny.toml  download-geodata.sh  rustfmt.toml
.cargo/: config.toml  config.toml.release-build
clusters/bluesea/: Cargo.toml
clusters/bluesea/src/: endpoint.rs  lib.rs  server.rs  types.rs
clusters/local/: CHANGELOG.md  Cargo.toml
clusters/local/src/: event_hub.rs  lib.rs  media_hub.rs
clusters/local/src/event_hub/: peer.rs  room.rs
clusters/sdn/: CHANGELOG.md  Cargo.toml
clusters/sdn/src/: endpoint.rs  lib.rs  server.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CURRENT_ISSUES.md  DEVELOPER_GUIDE.md  FEATURES.md  README.md  SPEC.md  SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDE.md  architecture.md  intergration.md  issue-template.md  (+1 more)
servers/media/: CHANGELOG.md  Cargo.toml
servers/media-server/: CHANGELOG.md  Cargo.toml
servers/media-server/examples/: simple_sip_calling_service.rs
servers/media-server/public/: index.html
servers/media-server/public/webrtc/: index.html
servers/media-server/public/webrtc/whep/: whep.demo.js
servers/media-server/public/webrtc/whip/: whip.demo.js  whip.js
servers/media-server/scripts/: gateway.sh  gateway_global.sh  gateway_inner.sh  gateway_other.sh  media_rtmp.sh  media_sip.sh  media_webrtc.sh
servers/media-server/src/: main.rs  server.rs
servers/media-server/src/rpc/: cluster.rs  http.rs
servers/media-server/src/rpc/http/: embeded_endpoint.rs  payload_sdp.rs  remote_ip_addr.rs  rpc_req.rs  user_agent.rs
servers/media-server/src/server/: connector.rs  gateway.rs  rtmp.rs  sip.rs  token_generate.rs  webrtc.rs
servers/media-server/src/server/connector/: queue.rs  rpc.rs
servers/media-server/src/server/connector/rpc/: cluster.rs  http.rs
servers/media-server/src/server/connector/serializers/: json.rs  mod.rs
servers/media-server/src/server/connector/transports/: http.rs  mod.rs  nats.rs
servers/media-server/src/server/gateway/: ip2location.rs  logic.rs  rpc.rs  webrtc_route.rs
servers/media-server/src/server/gateway/logic/: global_registry.rs  inner_registry.rs  service.rs
servers/media-server/src/server/gateway/rpc/: cluster.rs  http.rs
servers/media-server/src/server/rtmp/: rpc.rs  server_tcp.rs  session.rs
servers/media-server/src/server/rtmp/rpc/: cluster.rs  http.rs
servers/media-server/src/server/sip/: hooks.rs  middleware.rs  rpc.rs  server_udp.rs  sip_in_session.rs  sip_out_session.rs  sip_server.rs
servers/media-server/src/server/sip/middleware/: sip_incall.rs  sip_outcall.rs
servers/media-server/src/server/sip/rpc/: cluster.rs  http.rs
servers/media-server/src/server/token_generate/: http.rs
servers/media-server/src/server/webrtc/: middleware.rs  rpc.rs  session.rs
servers/media-server/src/server/webrtc/middleware/: whep_auto_attach.rs
servers/media-server/src/server/webrtc/rpc/: cluster.rs  http.rs
servers/media/public/whep/: whep.d.ts  whep.demo.js  whep.html  whep.js
servers/media/public/whip/: whip.d.ts  whip.demo.js  whip.html  whip.js
servers/media/src/: main.rs  server.rs
servers/media/src/rpc/: http.rs  mod.rs
servers/media/src/rpc/http/: apis.rs  payload_sdp.rs
servers/media/src/server/: rtmp_session.rs  webrtc_session.rs
servers/sip-gateway/: Cargo.toml
servers/sip-gateway/src/: main.rs  server.rs  sip_in_session.rs  sip_out_session.rs  sip_session.rs
servers/webrtc/: Cargo.toml  Readme.md
servers/webrtc/benches/: sample.sdp  sdp_rewrite.rs
servers/webrtc/src/: lib.rs  main.rs  rpc.rs  server.rs  transport.rs
servers/webrtc/src/rpc/: http.rs
servers/webrtc/src/rpc/http/: apis.rs  payload_sdp.rs
servers/webrtc/src/server/: webrtc_session.rs
servers/webrtc/src/transport/: internal.rs  life_cycle.rs  mid_history.rs  msid_alias.rs  rpc.rs  rtp_packet_convert.rs  sdp_box.rs  str0m_event_convert.rs  utils.rs
servers/webrtc/src/transport/internal/: life_cycle.rs  rpc.rs  rtp_packet_convert.rs  track_info_queue.rs  utils.rs
servers/webrtc/src/transport/internal/life_cycle/: sdk.rs
servers/webrtc/src/transport/internal/rtp_packet_convert/: h264.rs  vp8.rs  vp9.rs
servers/webrtc/src/transport/life_cycle/: sdk.rs  whip.rs
servers/webrtc/src/transport/net/: ssltcp.rs
servers/webrtc/src/transport/rtp_packet_convert/: vp9.rs
transports/rtmp/: CHANGELOG.md  Cargo.toml
transports/rtmp/src/: lib.rs  rtmp.rs  transport.rs
transports/rtmp/src/rtmp/: audio_convert.rs  video_convert.rs
transports/sip/: CHANGELOG.md  Cargo.toml
transports/sip/src/: SIP.md  lib.rs  rtp_engine.rs  server.rs  sip.rs  transport.rs  transport_in.rs  transport_out.rs  virtual_socket.rs
transports/sip/src/rtp_engine/: audio_frame.rs  g711.rs  g711_decoder.rs  g711_encoder.rs  opus_decoder.rs  opus_encoder.rs  resample.rs  rtp.rs
transports/sip/src/sip/: data.rs  processor.rs  sip_request.rs  sip_response.rs  transaction.rs  utils.rs
transports/sip/src/sip/data/: sip_pkt.rs
transports/sip/src/sip/processor/: call_in.rs  call_out.rs  register.rs
transports/sip/src/sip/processor/call_in/: invite_transaction.rs
transports/sip/src/sip/transaction/: client_invite_transaction.rs  server_invite_transaction.rs
transports/webrtc/: CHANGELOG.md  Cargo.toml
transports/webrtc/benches/: sdp_rewrite.rs
transports/webrtc/src/: lib.rs  rpc.rs  transport.rs
transports/webrtc/src/transport/: ice_candidate_parse.rs  internal.rs  life_cycle.rs  mid_convert.rs  pt_mapping.rs  rpc_wait_queue.rs  rtp_packet_convert.rs  sdp_box.rs  str0m_event_convert.rs
transports/webrtc/src/transport/internal/: local_track_id_generator.rs  rpc.rs  track_info_queue.rs  utils.rs
transports/webrtc/src/transport/internal/life_cycle/: sdk.rs
transports/webrtc/src/transport/life_cycle/: datachannel.rs  no_datachannel.rs  sdk.rs  whep.rs  whip.rs
transports/webrtc/src/transport/net/: mod.rs  ssltcp.rs  udp.rs  udp2.rs
transports/webrtc/src/transport/rtp_packet_convert/: bit_read.rs  h264.rs  rid_history.rs  vp8.rs  vp9.rs
(+84 files in other folders)
