[workspace]
resolver = "2"
members = [
    "bin",
    "packages/protocol",
    "packages/media_utils",
    "packages/media_core",
    "packages/media_runner",
    "packages/transport_webrtc",
    "packages/transport_rtpengine",
    "packages/media_secure",
    "packages/media_gateway",
    "packages/audio_mixer",
    "packages/media_connector",
    "packages/media_record",
    "packages/media_codecs",
    "packages/multi_tenancy",
    "packages/rtpengine_ngcontrol",
]

[workspace.dependencies]
sans-io-runtime = { path = "../sans-io-runtime", default-features = false }
atm0s-sdn = { path = "../atm0s-sdn/packages/runner", default-features = false }
atm0s-sdn-network = { path = "../atm0s-sdn/packages/network", default-features = false }
tokio = "1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
convert-enum = "0.1"
clap = "4.5"
num_enum = "0.7"
log = "0.4"
smallmap = "1.4"
serde = "1.0"
derivative = "2.2"
derive_more = "1.0"
rand = "0.8"
mockall = "0.13"
prost = "0.13"
indexmap = "2.2"
spin = "0.9"
httpmock = "0.7"
