[package]
name = "cluster-bluesea"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
cluster = { workspace = true }
transport = { workspace = true }
media-utils = { workspace = true }
runner = { git = "https://github.com/8xFF/decentralized-sdn.git" }
serde = { workspace = true }
bincode = { version = "1" }
futures = { workspace = true }
bytes = { version = "*" }