[package]
name = "cluster-local"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
cluster = { workspace = true }
media-utils = { workspace = true }
transport = { workspace = true }
async-trait = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }