[package]
name = "atm0s-media-server-cluster-local"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local cluster for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
cluster = { workspace = true }
media-utils = { workspace = true }
transport = { workspace = true }
async-trait = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }
