[package]
name = "cluster-sdn"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
cluster = { workspace = true }
transport = { workspace = true }
media-utils = { workspace = true }
atm0s-sdn = { version = "0.1.0", features = ["all"]}
serde = { workspace = true }
bincode = { version = "1" }
futures = { workspace = true }
bytes = { version = "*" }