[package]
name = "atm0s-media-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decentralized media-server with WebRTC/RTMP/Whip/Whep support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive", "env"] }
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
media-utils = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
poem = { version = "1.3", features = ["embed"] }
poem-openapi = { version = "3.0", features = ["swagger-ui", "static-files"] }
serde = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rust-embed = { version = "8.0", optional = true }
transport-webrtc = { workspace = true, optional = true }
transport-rtmp = { workspace = true, optional = true  }
transport-sip = { workspace = true, optional = true }
rsip = { version = "0.4.0", optional = true }
metrics-dashboard = "0.1.3"
metrics = "0.21.1"

[features]
default = ["embed-samples", "gateway", "webrtc", "rtmp", "sip"]
embed-samples = ["rust-embed"]
webrtc = ["transport-webrtc"]
rtmp = ["transport-rtmp"]
sip = ["rsip", "transport-sip"]
gateway = []
