[package]
name = "atm0s-media-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decentralized media-server with WebRTC/RTMP/Whip/Whep support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive", "env"] }
endpoint = { package = "atm0s-media-server-endpoint", path = "../../packages/endpoint", version = "0.1.0" }
transport = { package = "atm0s-media-server-transport", path = "../../packages/transport", version = "0.1.0" }
cluster = { package = "atm0s-media-server-cluster", path = "../../packages/cluster", version = "0.1.0" }
protocol = { package = "atm0s-media-server-protocol", path = "../../packages/protocol", version = "0.1.0" }
media-utils = { package = "atm0s-media-server-utils", path = "../../packages/media-utils", version = "0.1.0" }
transport-webrtc = { package = "atm0s-media-server-transport-webrtc", path = "../../transports/webrtc", version = "0.1.0", optional = true }
transport-rtmp = { package = "atm0s-media-server-transport-rtmp", path = "../../transports/rtmp", version = "0.1.0", optional = true }
transport-sip = { package = "atm0s-media-server-transport-sip", path = "../../transports/sip", version = "0.1.0", optional = true }
async-std = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
poem = { version = "2.0", features = ["embed"] }
poem-openapi = { version = "3.0", features = ["swagger-ui", "static-files"] }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rust-embed = { version = "8.2", optional = true }
rsip = { version = "0.4.0", optional = true }
metrics-dashboard = { version = "0.1.3", features = ["system"] }
metrics = "0.21.1"
nats = { version = "0.24.1", optional = true }
prost = { workspace = true, optional = true }

[features]
default = ["embed-samples", "gateway", "webrtc", "rtmp", "sip", "connector", "token_generate"]
embed-samples = ["rust-embed"]
webrtc = ["transport-webrtc"]
rtmp = ["transport-rtmp"]
sip = ["rsip", "transport-sip"]
gateway = []
connector = ["nats", "prost"]
token_generate = []
