[package]
name = "atm0s-media-server"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Decentralized media-server with WebRTC/RTMP/Whip/Whep support"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
endpoint = { package = "atm0s-media-server-endpoint", path = "../../packages/endpoint", version = "0.2.1" }
transport = { package = "atm0s-media-server-transport", path = "../../packages/transport", version = "0.2.1" }
cluster = { package = "atm0s-media-server-cluster", path = "../../packages/cluster", version = "0.2.1" }
protocol = { package = "atm0s-media-server-protocol", path = "../../packages/protocol", version = "0.1.1" }
media-utils = { package = "atm0s-media-server-utils", path = "../../packages/media-utils", version = "0.2.1" }
transport-webrtc = { package = "atm0s-media-server-transport-webrtc", path = "../../transports/webrtc", version = "0.2.1", optional = true }
transport-rtmp = { package = "atm0s-media-server-transport-rtmp", path = "../../transports/rtmp", version = "0.2.1", optional = true }
transport-sip = { package = "atm0s-media-server-transport-sip", path = "../../transports/sip", version = "0.1.1", optional = true }
async-std = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
poem = { version = "2.0", features = ["embed", "rustls"] }
poem-openapi = { workspace = true, features = ["swagger-ui", "static-files"] }
serde = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rust-embed = { version = "8.2", optional = true }
rsip = { version = "0.4.0", optional = true }
metrics-dashboard = { version = "0.2", features = ["system"] }
metrics = "0.22"
nats = { version = "0.24.1", optional = true }
prost = { workspace = true, optional = true }
reqwest = { version = "0.11.24", features = ["default-tls", "json"], optional = true }
md5 = {version = "0.7.0", optional = true }
rand = "0.8.5"
yaque = { version = "0.6.6", optional = true }
maxminddb = { version = "0.24.0", optional = true }
bincode = { version = "1" }

[dev-dependencies]
md5 = "0.7.0"

[features]
default = ["embed-samples", "gateway", "webrtc", "rtmp", "sip", "connector", "token_generate"]
embed-samples = ["rust-embed"]
webrtc = ["transport-webrtc"]
rtmp = ["transport-rtmp"]
sip = ["rsip", "transport-sip", "reqwest", "md5"]
gateway = ["maxminddb"]
connector = ["nats", "prost", "yaque"]
token_generate = []
