[package]
name = "media-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
cluster-local = { workspace = true }
cluster-sdn = { workspace = true }
transport-webrtc = { workspace = true }
transport-rtmp = { workspace = true }
media-utils = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workpsace = true }
poem = "*"
poem-openapi = { version = "*", features = ["swagger-ui", "static-files"] }
serde = { workspace = true }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std"] }