[package]
name = "sip-gateway-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
cluster-local = { workspace = true }
cluster-sdn = { workspace = true }
transport-sip = { workspace = true }
media-utils = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workpsace = true }
poem = "*"
poem-openapi = { version = "*", features = ["swagger-ui"] }
env_logger = { workspace = true }
serde = { workspace = true }
rsip = { git = "https://github.com/8xFF/rsip.git" }