[package]
name = "atm0s-media-server-sip-gateway"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Sip gateway for atm0s-media-server, support a part of SIP protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
cluster-local = { workspace = true }
cluster-sdn = { workspace = true }
transport-sip = { workspace = true }
media-utils = { workspace = true }
async-std = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
poem = "1.3"
poem-openapi = { version = "3.0", features = ["swagger-ui"] }
env_logger = { workspace = true }
serde = { workspace = true }
rsip = "0.4.0"
