[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
cluster-local = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
utils = { workspace = true }
str0m = { version = "0.3.0" }
socket2 = "0.5.4"
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workpsace = true }
poem = "*"
poem-openapi = { version = "*", features = ["swagger-ui"] }
env_logger = { workspace = true }
async-compat = "*"