[package]
name = "webrtc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { workspace = true }
transport = { workspace = true }
cluster = { workspace = true }
cluster-local = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
utils = { workspace = true }
str0m = { path = "/Users/giangminh/Workspace/bluesea/research/str0m" }
socket2 = "0.5.4"
parking_lot = { workspace = true }
futures = { workspace = true }
log = { workpsace = true }
poem = "*"
poem-openapi = { version = "*", features = ["swagger-ui"] }
env_logger = { workspace = true }
async-compat = "*"
serde = { workspace = true }
serde_json = { workspace = true }
lz4_flex = { version = "0.9.3" }
flate2 = { version = "1.0.24" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "sdp_rewrite"
harness = false