[package]
name = "atm0s-media-server-transport-rtmp"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "RTMP transport for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { package = "atm0s-media-server-endpoint", path = "../../packages/endpoint", version = "0.2.0" }
transport = { package = "atm0s-media-server-transport", path = "../../packages/transport", version = "0.2.0" }
media-utils = { package = "atm0s-media-server-utils", path = "../../packages/media-utils", version = "0.2.0" }
async-std = { workspace = true }
async-trait = { workspace = true }
rml_rtmp = "0.8"
log = { workspace = true }
futures = { workspace = true }
rtp = "0.9.0"
bytes = "1"
xflv = "0.3.0"
fdk-aac = "0.5.0"
opus = "0.3.0"
