[package]
name = "atm0s-media-server-transport-sip"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SIP transport for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { workspace = true }
transport = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
media-utils = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
bytes = "*"
rsip = { git = "https://github.com/8xFF/rsip.git" }
rand = "0.8"
sdp-rs = "0.2.1"
vec1 = "1"
rtp-rs = "0.6.0"
libsoxr = "0.2.9"
opus = "0.3.0"
