[package]
name = "atm0s-media-server-transport-sip"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SIP transport for atm0s-media-server"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { package = "atm0s-media-server-endpoint", path = "../../packages/endpoint", version = "0.2.0" }
transport = { package = "atm0s-media-server-transport", path = "../../packages/transport", version = "0.2.0" }
media-utils = { package = "atm0s-media-server-utils", path = "../../packages/media-utils", version = "0.2.0" }
async-std = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
bytes = "1.5"
rsip = "0.4.0"
rand = "0.8"
sdp-rs = "0.2.1"
vec1 = "1"
rtp-rs = "0.6.0"
libsoxr = "0.2.9"
opus = "0.3.0"
