[package]
name = "atm0s-media-server-transport-webrtc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Webrtc Transport for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { workspace = true }
transport = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
media-utils = { workspace = true }
poem-openapi = { version = "*", features = ["swagger-ui"] }
str0m = { git = "https://github.com/8xff/str0m.git", rev = "fe2c7a13b8d4314a40494039a20d06cb49d92c57"}
futures = { workspace = true }
log = { workpsace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lz4_flex = { version = "0.11.1" }
flate2 = { version = "1.0.28" }
local-ip-address = "0.5.6"
udp_sas_async = { version = "0.1.0", features = ["async_std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "sdp_rewrite"
harness = false