[package]
name = "atm0s-media-server-transport-webrtc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Webrtc Transport for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { workspace = true }
transport = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
media-utils = { workspace = true }
poem-openapi = { version = "3.0", features = ["swagger-ui"] }
str0m = { version = "0.1.0", package = "atm0s-custom-str0m" }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lz4_flex = { version = "0.11.1" }
flate2 = { version = "1.0.28" }
local-ip-address = "0.5.6"
udp_sas_async = { version = "0.1.0", features = ["async_std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "sdp_rewrite"
harness = false
