[package]
name = "atm0s-media-server-transport-webrtc"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Webrtc Transport for atm0s-media-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
endpoint = { package = "atm0s-media-server-endpoint", path = "../../packages/endpoint", version = "0.2.0" }
transport = { package = "atm0s-media-server-transport", path = "../../packages/transport", version = "0.2.0" }
media-utils = { package = "atm0s-media-server-utils", path = "../../packages/media-utils", version = "0.2.0" }
cluster = { package = "atm0s-media-server-cluster", path = "../../packages/cluster", version = "0.2.0" }
async-std = { workspace = true }
async-trait = { workspace = true }

str0m = { version = "0.1.0", package = "atm0s-custom-str0m" }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
local-ip-address = "0.5.6"
udp_sas_async = { version = "0.2.0", features = ["async_std"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "sdp_rewrite"
harness = false
